# biofouling-backend

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  create_project.ps1  deploy.ps1  pyproject.toml  test_api.py  train_mock_model.py
backend/app/: main.py
backend/app/api/routes/: health.py  predictions.py
backend/app/core/: config.py  constants.py  currency_service.py  impact_calculator.py  model_loader.py
backend/app/ml_model/: model.joblib
backend/app/models/: schemas.py
backend/scripts/: deploy.ps1
backend/tests/: test_api.py  test_impact_calculator.py
docs/: context.md  hackathon.ipynb  plano.md  regulamento-transpetro.md  science-formulas.md
